@@ -98,6 +98,10 @@ __END__
 
 Parse::HTTP::UserAgent::Base::Accessors - Available accessors
 
+=head1 DEPRECATION NOTICE
+
+This module is B<DEPRECATED>. Please use L<HTTP::BrowserDetect> instead.
+
 =head1 SYNOPSIS
 
    use Parse::HTTP::UserAgent;
