@@ -160,6 +160,10 @@ __END__
 
 Parse::HTTP::UserAgent::Base::IS - Base class
 
+=head1 DEPRECATION NOTICE
+
+This module is B<DEPRECATED>. Please use L<HTTP::BrowserDetect> instead.
+
 =head1 DESCRIPTION
 
 Internal module.
