@@ -1,6 +1,7 @@
 Revision history for Perl extension Parse::HTTP::UserAgent
 
 {{$NEXT}}
+    - DEPRECATED. Please use HTTP::BrowserDetect instead.
 
 0.42 2017-11-20 BURAK
     - Re-release after distro fixes.
